r38:
+ Fixed a memory bug in the CIrrBPWorld class. It caused a heap corruption after inserting a constraint.

r37:
+ Added setDeactivation function in rigidBody class, so the user can manually set the deactivation flag of a body.

IrrBP 0.30 Final (r36):
+ Updated irrBP Project with actions folder

IrrBP 0.30 (r35):
+ Updated documentation (in the downloadable package)
+ Added support to Physics Action 
+ Added Raycast Vehicle support.

r34:
+ Fixed RigidBody setPosition() method
+ Added setRotation() method in Rigid Body class

r33:
+ Fixed mesh->clear() function missing bug. The function was only implemented in SVN Versions of irrlicht
+ Fixed header include folder, to cleanly compile irrBP on other platforms (thanks to serengeor).
+ Added Code::Blocks Project File (thanks to serengeor).

r32:
+ Minor documentation bugfix.

r31:
+ Updated rigid bodies destructors. The older versions of destructor can have some problems

r30:
- Removed bug when using Patch Soft Body without assign it a mesh

IrrBP 0.21 (r29):
+ Fixed an important bug that can swallow bullet determinism when FPS changes

IrrBP 0.2 (r28):
+ Implemented convex hull bodies
- SVN Docs wont be update by now. You must download the SDK to view the updated doxygen documentation

r27:
+ Re-wrote the CollisionCallbackAnimator with CollisionResultCallback to customize the callback
+ Re-wrote the TimeCallbackAnimator with EndTimeCallback to customize the callback
+ Preparing for irrBP 0.2 release

r26:
+ Adjusted setPosition() function. It's now possible to move KINEMATIC objects trough the levels like an irrlicht node.

r25:
+ Added new animator, called TimeCallBackAnimator that helps to call a function after a defined time

r22:
+ Removed an unused variable, updated irrBPLib VS project

r21:
+ Added new animator, called CollisionCallbackAnimator that helps to retrieve the collision-point of an object by calling a user function

r20:
+ New function clear() to remove all bodies and constraints from the world
